[package]
name = "genome-api"
version = "0.1.0"
authors = ["r1cebank <siyuangao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genome = "0.1.0"
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket_contrib = { version = "0.4.2", default-features = false, features = ["json"] }
